# hugging_face_ia

./: .envrc  .gitattributes  .gitignore  README.md  hello.py  pyproject.toml
chapter_02/: main.py
chapter_03/: README.md  bert.py  npl_tasks.py  qa.py  sentiment_analysis.py  text_generation.py  token_embeddings.py  transformers_pipelines.py  zero-shot_classification.py
chapter_04/: README.md  image_segmentation.py
chapter_05/: README.md  dataset_streaming.py  financial_news_distribution_visualization.ipynb  reading_parquet_file.py  tokenization_in_nlp.py
chapter_06/: README.md  fine_tuned_yelp_sentiment_analysis.py
chapter_07/: README.md  chatbot_on_adoc_file.py  maintain_llm_conversation_with_langchain.py
chapter_09/: README.md  langgraph_example.py
