[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project]
dependencies = [
  "huggingface-hub>=0.33.1",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.6 ; python_full_version >= '3.11'",
  "pandas>=2.3.0",
  "scikit-learn>=1.7.1 ; python_full_version >= '3.11'",
  "sentencepiece>=0.2.1 ; python_full_version >= '3.11'",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.18.0",
  "transformers>=4.52.4",
]
name = "hugging_face_ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
