[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project]
dependencies = [
  "accelerate>=0.26.0",
  "datasets>=4.1.1",
  "docling-core>=2.55.0",
  "google-search-results>=2.4.2",
  "gradio>=5.46.1",
  "huggingface-hub>=0.33.1",
  "jupyter>=1.1.1",
  "langchain>=1.1.2",
  "langchain-community>=0.3.0",
  "langchain-huggingface>=1.1.0",
  "langchain-ollama>=1.0.0",
  "langchain-openai>=0.3.0",
  "langgraph>=1.0.4",
  "llama-index>=0.12.52",
  "llama-index-embeddings-huggingface>=0.5.5",
  "llama-index-llms-ollama>=0.6.2",
  "llama-index-readers-docling>=0.3.3",
  "matplotlib>=3.10.6 ; python_full_version >= '3.11'",
  "pandas>=2.3.0",
  "protobuf>=6.32.1 ; python_full_version >= '3.11'",
  "pyarrow>=21.0.0",
  "scikit-learn>=1.7.1 ; python_full_version >= '3.11'",
  "sentencepiece>=0.2.1 ; python_full_version >= '3.11'",
  "timm>=1.0.19",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.18.0",
  "transformers>=4.52.4",
]
name = "hugging_face_ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
